--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,74 @@
 html {
     font-size: 62.5%;
 }
-h1 {
-    font-size: 3rem;
+body {
+    font-family: "Poppins", sans-serif;
+    font-size: 1.6rem;
+}
+a {
+    text-decoration: none;
+}
+.main-content {
+    width: 1170px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: calc(100% - 48px);
+}
+
+.header.fixed {
+    position: sticky;
+    top: -28px;
+}
+.header .body {
+    display: flex;
+    align-items: center;
+    padding: 36px 0 8px;
+}
+.btn {
+    display:inline-block;
+    padding: 0 16px;
+    min-width: 118px;
+    line-height: 50px;
+    color: #fff;
+    text-align: center;
+    font-size: 1.6rem;
+    font-weight: 600;
+    border-radius: 24.5px;
+    background: #171100;
+}
+.nav ul {
+    display: flex;
+}
+.nav  {
+  margin-left: auto;
+}
+.nav a {
+    position: relative;
+    color: #5F5B53;
+    font-size: 1.6rem;
+    /* background-color: blue; */
+    padding: 8px 21px;
+    
+}
+.nav li.active a,
+.nav a:hover {
+    color: #000;
+    text-shadow: 1px 0 0 currentColor;
+}
+.nav li.active a::after {
+    position:absolute;
+    display: block;
+    left: 21px;
+    bottom: 6px;
+    content: "";
+    width: 12px;
+   height: 2px;
+   border-radius: 1px;
+   background: #171100;
+}
+.header .btn-sign-up {
+    min-width: 144px;
+}
+.header .action {
+  margin-left: 49px;
 }
